fixed mobile layout issue on header. Fixed a couple of fonts. About to work on location parallax img.

--- a/output.css
+++ b/output.css
@@ -5,6 +5,7 @@
   :root, :host {
     --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-black: #000;
@@ -16,12 +17,6 @@
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
     --font-weight-bold: 700;
     --leading-relaxed: 1.625;
     --radius-md: 0.375rem;
@@ -369,11 +364,14 @@
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
   }
+  .pl-\[0\.5rem\] {
+    padding-left: 0.5rem;
+  }
   .text-center {
     text-align: center;
   }
-  .font-\[cursive\] {
-    font-family: cursive;
+  .font-serif {
+    font-family: var(--font-serif);
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -440,6 +438,15 @@
   font-family: "Satisfy", cursive;
   font-weight: 400;
   font-style: normal;
+}
+.merienda-regular {
+  font-family: "Merienda", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+.custom-height-105vh {
+  height: 105vh;
 }
 @property --tw-scale-x {
   syntax: "*";
